[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Train.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Train/Train.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 214.5, 35.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 309, 162.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.5, 29.5 )

[node name="Train" type="KinematicBody2D" groups=["Train"]]
script = ExtResource( 2 )

[node name="Train" type="Sprite" parent="."]
position = Vector2( -2, 2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8.5, -20.5 )
shape = SubResource( 1 )

[node name="Detected" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detected"]
position = Vector2( -1, -37.5 )
shape = SubResource( 2 )

[node name="StartStop" type="Timer" parent="."]
one_shot = true

[node name="TrainArea" type="Area2D" parent="." groups=["Train"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrainArea"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="Detected" to="." method="_on_Detected_area_entered"]
[connection signal="area_exited" from="Detected" to="." method="_on_Detected_area_exited"]
[connection signal="timeout" from="StartStop" to="." method="_on_StartStop_timeout"]
